# OOP2024_2025

./: README.md
OOP_CoursesZadaci_Ispit/: 1.cpp  10.cpp  11.cpp  12.cpp  14.cpp  15.cpp  16.cpp  17.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  kvali1.cpp  kvali2.cpp  kvali3.cpp  вк1.cpp  вк2.cpp
OOP_primerIspitni_lanski/: apstraktnaKlasa.cpp  apstraktnaKlasa2.cpp  datoteka1.cpp  datoteka2.cpp
Objektno_prvKolokvium/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4 - nedoreshena.cpp  5.cpp  6.cpp  8,9.cpp  CMakeLists.txt  kvali1.cpp  kvali2.cpp  kvali3.cpp  kvali4.cpp  kvali5.cpp  kvali6.cpp  primer_kolokviumska1.cpp  primer_kolokviumska2.cpp  zadaca_tip1.cpp  zadaca_tip2.cpp
