cmake_minimum_required(VERSION 3.26)
project(OOP_CoursesZadaci_Ispit)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP_CoursesZadaci_Ispit main.cpp
        1.cpp
        1.cpp
        2.cpp
        3.cpp
        5.cpp
        4.cpp
        6.cpp
        7.cpp
        8.cpp
        9.cpp
        10.cpp
        11.cpp
        12.cpp
        13.cpp
        14.cpp
        15.cpp
        16.cpp
        17.cpp
        kvali1.cpp
        kvali2.cpp
        kvali3.cpp
        вк1.cpp
        вк2.cpp)
