cmake_minimum_required(VERSION 3.26)
project(Objektno_prvKolokvium)

set(CMAKE_CXX_STANDARD 17)

add_executable(Objektno_prvKolokvium 1.cpp
        2.cpp
        2.cpp
        3.cpp
        3.cpp
        "4 - nedoreshena.cpp"
        "4 - nedoreshena.cpp"
        5.cpp
        5.cpp
        6.cpp
        8,9.cpp
        10.cpp
        11.cpp
        12.cpp
        kvali1.cpp
        kvali1.cpp
        kvali2.cpp
        kvali2.cpp
        kvali3.cpp
        kvali4.cpp
        "kvali5.cpp"
        kvali6.cpp
        kvali6.cpp
        primer_kolokviumska1.cpp
        primer_kolokviumska2.cpp
        zadaca_tip2.cpp
        zadaca_tip1.cpp
        zadaca_tip1.cpp)
